// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SceneDialoguePolishPrompt golden > leaves optional blocks out for the generic variant 1`] = `
{
  "system": "장면의 뼈대를 받아 대사만 손본다. 사건과 행동은 그대로 두고, 인물들이 주고받는 말을 그 인물답게 고쳐라.
각 인물의 페르소나에 적힌 말투·어휘·호칭을 대사에 그대로 반영하라. 누가 말했는지 이름을 지우고 읽어도 구분될 만큼 서로 다르게 써라.
대사의 개수와 순서는 뼈대 그대로 두어라. 대사를 새로 만들거나 하나를 둘로 쪼개지 마라. 앞 대사를 의문형으로 되풀이하는 턴은 특히 금지한다.
새로운 정보·결정·약속을 대사로 만들지 마라. 뼈대에 없던 사건을 말로 일으키는 것도 금지한다. 고치는 것은 이미 있는 대사의 말투·어휘·호흡뿐이다.
페르소나에 따옴표로 적힌 예시 대사는 말투를 알려 주는 참고일 뿐이다. 그 문장을 대사로 옮겨 쓰지 마라.
[이전 대사] 목록은 그 인물이 앞선 장면에서 실제로 한 말이다. 어미·호칭·문장 길이를 여기에 맞춰라. 문장 자체를 옮겨 쓰는 것은 금지한다.
뼈대에 없는 인물을 등장시키거나 말하게 하지 마라.
행동·이동을 적은 서술 문장과 단독 줄의 --- 표시는 위치와 내용을 그대로 두어라.
설명이나 머리말 없이 손본 뼈대 전문만 한국어로 출력하라.
서술은 과거형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.",
  "user": "
[뼈대]
빈 장면",
}
`;

exports[`SceneDialoguePolishPrompt golden > leaves optional blocks out for the generic variant 2`] = `
{
  "system": "장면의 뼈대를 받아 대사만 손본다. 사건과 행동은 그대로 두고, 인물들이 주고받는 말을 그 인물답게 고쳐라.
각 인물의 페르소나에 적힌 말투·어휘·호칭을 대사에 그대로 반영하라. 누가 말했는지 이름을 지우고 읽어도 구분될 만큼 서로 다르게 써라.
대사의 개수와 순서는 뼈대 그대로 두어라. 대사를 새로 만들거나 하나를 둘로 쪼개지 마라. 앞 대사를 의문형으로 되풀이하는 턴은 특히 금지한다.
새로운 정보·결정·약속을 대사로 만들지 마라. 뼈대에 없던 사건을 말로 일으키는 것도 금지한다. 고치는 것은 이미 있는 대사의 말투·어휘·호흡뿐이다.
페르소나에 따옴표로 적힌 예시 대사는 말투를 알려 주는 참고일 뿐이다. 그 문장을 대사로 옮겨 쓰지 마라.
[이전 대사] 목록은 그 인물이 앞선 장면에서 실제로 한 말이다. 어미·호칭·문장 길이를 여기에 맞춰라. 문장 자체를 옮겨 쓰는 것은 금지한다.
뼈대에 없는 인물을 등장시키거나 말하게 하지 마라.
행동·이동을 적은 서술 문장과 단독 줄의 --- 표시는 위치와 내용을 그대로 두어라.
설명이나 머리말 없이 손본 뼈대 전문만 한국어로 출력하라.
서술은 과거형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.",
  "user": "[등장 캐릭터 페르소나]
[하나]
말투: 단호

[뼈대]
빈 장면",
}
`;

exports[`SceneDialoguePolishPrompt golden > leaves optional blocks out for the xs variant 1`] = `
{
  "system": "뼈대의 대사를 인물의 말투에 맞게 고쳐라. 대사 개수·순서·사건·행동은 그대로. 대사는 곡선 큰따옴표로. 새 대사나 정보나 인물 금지. 페르소나 예시 대사 복사 금지. 전문만 출력.",
  "user": "
[뼈대]
빈 장면",
}
`;

exports[`SceneDialoguePolishPrompt golden > leaves optional blocks out for the xs variant 2`] = `
{
  "system": "뼈대의 대사를 인물의 말투에 맞게 고쳐라. 대사 개수·순서·사건·행동은 그대로. 대사는 곡선 큰따옴표로. 새 대사나 정보나 인물 금지. 페르소나 예시 대사 복사 금지. 전문만 출력.",
  "user": "[등장 캐릭터 페르소나]
[하나]
말투: 단호

[뼈대]
빈 장면",
}
`;

exports[`SceneDialoguePolishPrompt golden > renders every block for the generic variant 1`] = `
{
  "system": "장면의 뼈대를 받아 대사만 손본다. 사건과 행동은 그대로 두고, 인물들이 주고받는 말을 그 인물답게 고쳐라.
각 인물의 페르소나에 적힌 말투·어휘·호칭을 대사에 그대로 반영하라. 누가 말했는지 이름을 지우고 읽어도 구분될 만큼 서로 다르게 써라.
대사의 개수와 순서는 뼈대 그대로 두어라. 대사를 새로 만들거나 하나를 둘로 쪼개지 마라. 앞 대사를 의문형으로 되풀이하는 턴은 특히 금지한다.
새로운 정보·결정·약속을 대사로 만들지 마라. 뼈대에 없던 사건을 말로 일으키는 것도 금지한다. 고치는 것은 이미 있는 대사의 말투·어휘·호흡뿐이다.
페르소나에 따옴표로 적힌 예시 대사는 말투를 알려 주는 참고일 뿐이다. 그 문장을 대사로 옮겨 쓰지 마라.
[이전 대사] 목록은 그 인물이 앞선 장면에서 실제로 한 말이다. 어미·호칭·문장 길이를 여기에 맞춰라. 문장 자체를 옮겨 쓰는 것은 금지한다.
뼈대에 없는 인물을 등장시키거나 말하게 하지 마라.
행동·이동을 적은 서술 문장과 단독 줄의 --- 표시는 위치와 내용을 그대로 두어라.
설명이나 머리말 없이 손본 뼈대 전문만 한국어로 출력하라.
서술은 현재형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.
장르·톤: 무협
문체 제약: 짧은 문장
작품 금지 규칙 — 어떤 장면에서도 위반하지 마라: 욕설
이 장면의 시점 인물: 하나 — 이 인물의 지각과 내면만 서술하고, 다른 인물의 속마음은 겉으로 드러난 행동·표정으로만 전하라.
이 장면의 인물 관계 단계: 경계 — 이 단계에 맞는 태도와 거리감으로 표현하라.",
  "user": "[등장 캐릭터 페르소나]
[하나]
말투: 짧고 단호함
호칭: 너
[이전 대사]
- “빨리 와.”
- “됐어.”
[준]
말투: 느릿함
[민]

[뼈대]
하나가 말했다. “가자.”
---
준이 고개를 저었다.",
}
`;

exports[`SceneDialoguePolishPrompt golden > renders every block for the rich variant 1`] = `
{
  "system": "장면의 뼈대를 받아 대사만 손본다. 사건과 행동은 그대로 두고, 인물들이 주고받는 말을 그 인물답게 고쳐라.
각 인물의 페르소나에 적힌 말투·어휘·호칭을 대사에 그대로 반영하라. 누가 말했는지 이름을 지우고 읽어도 구분될 만큼 서로 다르게 써라.
대사의 개수와 순서는 뼈대 그대로 두어라. 대사를 새로 만들거나 하나를 둘로 쪼개지 마라. 앞 대사를 의문형으로 되풀이하는 턴은 특히 금지한다.
새로운 정보·결정·약속을 대사로 만들지 마라. 뼈대에 없던 사건을 말로 일으키는 것도 금지한다. 고치는 것은 이미 있는 대사의 말투·어휘·호흡뿐이다.
페르소나에 따옴표로 적힌 예시 대사는 말투를 알려 주는 참고일 뿐이다. 그 문장을 대사로 옮겨 쓰지 마라.
[이전 대사] 목록은 그 인물이 앞선 장면에서 실제로 한 말이다. 어미·호칭·문장 길이를 여기에 맞춰라. 문장 자체를 옮겨 쓰는 것은 금지한다.
뼈대에 없는 인물을 등장시키거나 말하게 하지 마라.
행동·이동을 적은 서술 문장과 단독 줄의 --- 표시는 위치와 내용을 그대로 두어라.
설명이나 머리말 없이 손본 뼈대 전문만 한국어로 출력하라.
서술은 현재형으로 쓰고 한 장면 안에서 시제를 섞지 마라. 대사 안의 시제는 인물의 말이므로 예외다.
대사는 곡선 큰따옴표(“ ”)로 감싸라. 직선 따옴표나 다른 기호로 대신하지 마라.
장르·톤: 무협
문체 제약: 짧은 문장
작품 금지 규칙 — 어떤 장면에서도 위반하지 마라: 욕설
이 장면의 시점 인물: 하나 — 이 인물의 지각과 내면만 서술하고, 다른 인물의 속마음은 겉으로 드러난 행동·표정으로만 전하라.
이 장면의 인물 관계 단계: 경계 — 이 단계에 맞는 태도와 거리감으로 표현하라.",
  "user": "[등장 캐릭터 페르소나]
[하나]
말투: 짧고 단호함
호칭: 너
[이전 대사]
- “빨리 와.”
- “됐어.”
[준]
말투: 느릿함
[민]

[뼈대]
하나가 말했다. “가자.”
---
준이 고개를 저었다.",
}
`;

exports[`SceneDialoguePolishPrompt golden > renders every block for the xs variant 1`] = `
{
  "system": "뼈대의 대사를 인물의 말투에 맞게 고쳐라. 대사 개수·순서·사건·행동은 그대로. 대사는 곡선 큰따옴표로. 새 대사나 정보나 인물 금지. 페르소나 예시 대사 복사 금지. 전문만 출력.",
  "user": "[등장 캐릭터 페르소나]
[하나]
말투: 짧고 단호함
호칭: 너
[이전 대사]
- “빨리 와.”
- “됐어.”
[준]
말투: 느릿함
[민]

[뼈대]
하나가 말했다. “가자.”
---
준이 고개를 저었다.",
}
`;
